unpackaged/main/default/objects/Numero_de_Credito__c/Numero_de_Credito__c.object-meta.xml
<CustomObject>
    <label>Numero de Credito</label>
    <nameField>
        <displayFormat>C-{00000000}</displayFormat>
        <label>Nombre de Numero de Credito</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Numeros de Credito</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>