unpackaged/main/default/objects/Numero_de_Credito__c/fields/Asunto__c.field-meta.xml
<CustomField>
    <fullName>Asunto__c</fullName>
    <label>Asunto</label>
    <referenceTo>Asunto__c</referenceTo>
    <relationshipLabel>Numeros de Credito</relationshipLabel>
    <relationshipName>Numeros_de_Credito</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>