unpackaged/main/default/objects/Numero_de_Credito__c/fields/Numero_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_Credito__c</fullName>
    <label>NÚMERO DE CRÉDITO</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>