unpackaged/main/default/objects/Numero_de_Credito__c/fields/Terceros_Obligados__c.field-meta.xml
<CustomField>
    <fullName>Terceros_Obligados__c</fullName>
    <label>Terceros Obligados</label>
    <length>255</length>
    <type>Text</type>
</CustomField>