unpackaged/main/default/objects/Numero_de_Credito__c/fields/Tipo_de_Cartera__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cartera__c</fullName>
    <label>Tipo de Cartera</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pymes</fullName>
            </value>
            <value>
                <fullName>Apoyo Nafin</fullName>
            </value>
            <value>
                <fullName>Apoyo Banxico</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>