unpackaged/main/default/objects/Numero_de_Credito__c/fields/Tipo_de_Credito__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Credito__c</fullName>
    <label>TIPO CRÉDITO</label>
    <length>100</length>
    <type>Text</type>
</CustomField>