unpackaged/main/default/objects/Numero_de_Credito__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Numero_de_Credito__c</columns>
    <columns>Monto__c</columns>
    <columns>Tipo_de_Cartera__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>